crates/ash-core/tests/snapshots/snapshots__assistant_message.snap
---
source: crates/ash-core/tests/snapshots.rs
expression: msg
---
{
  "id": "[uuid]",
  "role": "assistant",
  "content": {
    "Assistant": [
      {
        "Text": "I can help with that."
      }
    ]
  }
}
