crates/ash-core/tests/snapshots/snapshots__event_context_compacted.snap
---
source: crates/ash-core/tests/snapshots.rs
expression: event
---
{
  "ContextCompacted": {
    "before": 180000,
    "after": 12000,
    "dropped": 42
  }
}
