crates/ash-core/tests/snapshots/snapshots__event_text_delta.snap
---
source: crates/ash-core/tests/snapshots.rs
expression: event
---
{
  "Live": {
    "TextDelta": "Hello"
  }
}
