crates/ash-core/tests/snapshots/snapshots__event_tool_call_start.snap
---
source: crates/ash-core/tests/snapshots.rs
expression: event
---
{
  "Live": {
    "ToolStarted": {
      "id": "[uuid]",
      "name": "read",
      "arguments": {
        "path": "README.md"
      }
    }
  }
}
