crates/ash-core/tests/snapshots/snapshots__event_usage.snap
---
source: crates/ash-core/tests/snapshots.rs
expression: usage
---
{
  "input_tokens": 100,
  "output_tokens": 50,
  "tool_calls": 2
}
