crates/ash-core/tests/snapshots/snapshots__system_message.snap
---
source: crates/ash-core/tests/snapshots.rs
expression: msg
---
{
  "id": "[uuid]",
  "role": "System",
  "content": {
    "User": [
      {
        "Text": "You are a helpful assistant."
      }
    ]
  }
}
