crates/ash-core/tests/snapshots/snapshots__tool_call_block.snap
---
source: crates/ash-core/tests/snapshots.rs
expression: block
---
{
  "ToolCall": {
    "id": "[uuid]",
    "name": "bash",
    "arguments": {
      "command": "ls -la"
    }
  }
}
