crates/ash-core/tests/snapshots/snapshots__tool_result_error.snap
---
source: crates/ash-core/tests/snapshots.rs
expression: msg
---
{
  "id": "[uuid]",
  "role": "User",
  "content": {
    "ToolResult": {
      "id": "[uuid]",
      "result": {
        "Err": "command not found"
      },
      "attachments": []
    }
  }
}
