crates/ash-core/tests/snapshots/snapshots__tool_result_message.snap
---
source: crates/ash-core/tests/snapshots.rs
expression: msg
---
{
  "id": "[uuid]",
  "role": "user",
  "content": {
    "ToolResult": {
      "id": "[uuid]",
      "result": {
        "Ok": "file1.txt\nfile2.txt"
      },
      "attachments": []
    }
  }
}
