crates/ash-core/tests/snapshots/snapshots__user_message.snap
---
source: crates/ash-core/tests/snapshots.rs
expression: msg
---
{
  "id": "[uuid]",
  "role": "User",
  "content": {
    "User": [
      {
        "Text": "Hello, world!"
      }
    ]
  }
}
